@@ -1,6 +1,11 @@
 ChangeLog :
 ===========
 
+2005/10/25
+  - building with -DUSE_PCRE should include PCRE headers and not regex.h. At
+    least on Solaris, this caused the libc's regex primitives to be used instead
+    of PCRE, which caused trouble on group references. This is now fixed.
+
 2005/10/09 : 1.1.33rc
   - socklen_t fixes from Alexander Lazic
   - second batch of socklen_t changes.
